@@ -21,6 +21,7 @@
 
 #endregion
 
+using System;
 using System.Linq;
 using System.Text.Json;
 
@@ -45,7 +46,7 @@ namespace Gremlin.Net.Structure.IO.GraphSON
                 ? labelProperty.GetString()!
                 : "edge";
 
-            dynamic[]? properties = null;
+            dynamic[] properties = Array.Empty<dynamic>();
             if (graphsonObject.TryGetProperty("properties", out var propertiesObject)
                 && propertiesObject.ValueKind == JsonValueKind.Object)
             {
